cmake_minimum_required(VERSION 3.19)
set (CMAKE_CXX_COMPILER "g++")
set (CMAKE_C_COMPILER "gcc")

project(scratch)

set(CMAKE_CXX_STANDARD 20)

add_executable(day_one day_one.cpp)
add_executable(day_two day_two.cpp)
add_executable(day_three day_three.cpp)
add_executable(day_four day_four.cpp)
add_executable(day_five_pt1 day_five_pt1.cpp)
add_executable(day_five_pt2 day_five_pt2.cpp)
add_executable(day_six day_six.cpp)
add_executable(day_seven day_seven.cpp)
add_executable(day_eight day_eight.cpp)
add_executable(day_nine day_nine.cpp)
add_executable(day_ten day_ten.cpp)
add_executable(day_11 day_11.cpp)
add_executable(day_12_pt1 day_12_pt1.cpp)
add_executable(day_12_pt2 day_12_pt2.cpp)
add_executable(day_13 day_13.cpp)
add_executable(day_14 day_14.cpp)
add_executable(day_15 day_15.cpp)
add_executable(day_16 day_16.cpp)
add_executable(day_17 day_17.cpp)
add_executable(day_18 day_18.cpp)
add_executable(day_19 day_19.cpp)
add_executable(day_20 day_20.cpp)
add_executable(day_21 day_21.cpp)
add_executable(day_22 day_22.cpp)
add_executable(day_23_m1 day_23_m1.cpp)
add_executable(day_23_m2 day_23_m2.cpp)
add_executable(day_24 day_24.cpp)
add_executable(day_25 day_25.cpp)
#add_executable(day_XX_1 day_XX_1.cpp)